--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Pavlo Petrenko",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
