--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,6 +17,14 @@
   ],
   "author": "Pavlo Petrenko",
   "license": "ISC",
+  "homepage": "https://github.com/agronom81/weather-cli",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/agronom81/weather-cli"
+  },
+  "bugs": {
+    "url": "https://github.com/agronom81/weather-cli"
+  },
   "dependencies": {
     "axios": "^1.3.5",
     "chalk": "^5.2.0",
